// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Button empty snapshot test Should render correctly 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-backgroundColor-t6fudj r-paddingLeft-1m04atk r-paddingRight-1pyaxff"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
/>
`;

exports[`Button component Button primary with title and icon snapshot test Should render correctly 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-paddingLeft-f727ji r-paddingRight-i023vh r-backgroundColor-t6fudj"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-view-g5y9jx"
    dir={null}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        Object {
          "color": "rgba(255,255,255,1.00)",
          "fontFamily": "alldone",
          "fontSize": "24px",
          "opacity": 1,
        }
      }
    >
      
    </div>
  </div>
  <div
    className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-jwli3a"
    dir="auto"
    style={
      Object {
        "marginLeft": "12px",
      }
    }
  >
    Upload
  </div>
</div>
`;

exports[`Button component Button text with only icon and disabled snapshot test Should render a blue text button correctly 1`] = `
<div
  aria-disabled={true}
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-backgroundColor-1niwhzg r-opacity-icoktb r-paddingLeft-1m04atk r-paddingRight-1pyaxff r-pointerEvents-12vffkv"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "transitionDuration": "0s",
    }
  }
  tabIndex="-1"
>
  <div
    className="css-view-g5y9jx"
    dir={null}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        Object {
          "color": "rgba(13,85,207,1.00)",
          "fontFamily": "alldone",
          "fontSize": "24px",
          "opacity": 1,
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`Button component Button text with only icon and disabled snapshot test Should render a red text button correctly 1`] = `
<div
  aria-disabled={true}
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-backgroundColor-1niwhzg r-opacity-icoktb r-paddingLeft-1m04atk r-paddingRight-1pyaxff r-pointerEvents-12vffkv"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "transitionDuration": "0s",
    }
  }
  tabIndex="-1"
>
  <div
    className="css-view-g5y9jx"
    dir={null}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        Object {
          "color": "rgba(224,0,0,1.00)",
          "fontFamily": "alldone",
          "fontSize": "24px",
          "opacity": 1,
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`Button component Function buildFinalStyle snapshot test Should render correctly after function execution 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "transparent",
      "borderColor": "#C6CDD2",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 0,
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "height": 40,
      "justifyContent": "center",
      "maxHeight": 40,
      "minHeight": 40,
      "opacity": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 8,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FFFFFF",
          "flexWrap": "nowrap",
          "fontFamily": "Roboto-Medium",
          "fontSize": 14,
          "letterSpacing": 0.8,
          "lineHeight": 16,
          "margin": 0,
          "paddingHorizontal": 8,
          "paddingVertical": 0,
        },
        Object {
          "color": "#8A94A6",
        },
        undefined,
      ]
    }
  >
    Next
  </Text>
</View>
`;
